Assembler/tests/ok/constants/shorts.asm
someShorts: .short 0x12FF,0xA344
