Assembler/tests/bad/constants/bad_short.asm
someShort: .short 0xFFFFF
